@@ -1091,19 +1091,19 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|serviceStart ()
-specifier|public
+DECL|method|serviceInit (Configuration conf)
+specifier|protected
 specifier|synchronized
 name|void
-name|serviceStart
-parameter_list|()
+name|serviceInit
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
 throws|throws
 name|Exception
 block|{
-try|try
-block|{
-name|getConfig
-argument_list|()
+name|conf
 operator|.
 name|setBoolean
 argument_list|(
@@ -1117,8 +1117,7 @@ expr_stmt|;
 if|if
 condition|(
 operator|!
-name|getConfig
-argument_list|()
+name|conf
 operator|.
 name|getBoolean
 argument_list|(
@@ -1141,8 +1140,7 @@ operator|.
 name|getHostname
 argument_list|()
 decl_stmt|;
-name|getConfig
-argument_list|()
+name|conf
 operator|.
 name|set
 argument_list|(
@@ -1155,8 +1153,7 @@ operator|+
 literal|":0"
 argument_list|)
 expr_stmt|;
-name|getConfig
-argument_list|()
+name|conf
 operator|.
 name|set
 argument_list|(
@@ -1169,8 +1166,7 @@ operator|+
 literal|":0"
 argument_list|)
 expr_stmt|;
-name|getConfig
-argument_list|()
+name|conf
 operator|.
 name|set
 argument_list|(
@@ -1183,8 +1179,7 @@ operator|+
 literal|":0"
 argument_list|)
 expr_stmt|;
-name|getConfig
-argument_list|()
+name|conf
 operator|.
 name|set
 argument_list|(
@@ -1201,8 +1196,7 @@ name|WebAppUtils
 operator|.
 name|setRMWebAppHostnameAndPort
 argument_list|(
-name|getConfig
-argument_list|()
+name|conf
 argument_list|,
 name|hostname
 argument_list|,
@@ -1234,10 +1228,30 @@ name|resourceManager
 operator|.
 name|init
 argument_list|(
-name|getConfig
-argument_list|()
+name|conf
 argument_list|)
 expr_stmt|;
+name|super
+operator|.
+name|serviceInit
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|serviceStart ()
+specifier|protected
+specifier|synchronized
+name|void
+name|serviceStart
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
 operator|new
 name|Thread
 argument_list|()
@@ -1378,7 +1392,7 @@ block|}
 annotation|@
 name|Override
 DECL|method|serviceStop ()
-specifier|public
+specifier|protected
 specifier|synchronized
 name|void
 name|serviceStop
@@ -1503,7 +1517,7 @@ name|i
 expr_stmt|;
 block|}
 DECL|method|serviceInit (Configuration conf)
-specifier|public
+specifier|protected
 specifier|synchronized
 name|void
 name|serviceInit
@@ -1523,6 +1537,209 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
+comment|// create nm-local-dirs and configure them for the nodemanager
+name|String
+name|localDirsString
+init|=
+name|prepareDirs
+argument_list|(
+literal|"local"
+argument_list|,
+name|numLocalDirs
+argument_list|)
+decl_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOCAL_DIRS
+argument_list|,
+name|localDirsString
+argument_list|)
+expr_stmt|;
+comment|// create nm-log-dirs and configure them for the nodemanager
+name|String
+name|logDirsString
+init|=
+name|prepareDirs
+argument_list|(
+literal|"log"
+argument_list|,
+name|numLogDirs
+argument_list|)
+decl_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOG_DIRS
+argument_list|,
+name|logDirsString
+argument_list|)
+expr_stmt|;
+name|File
+name|remoteLogDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|testWorkDir
+argument_list|,
+name|MiniYARNCluster
+operator|.
+name|this
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"-remoteLogDir-nm-"
+operator|+
+name|index
+argument_list|)
+decl_stmt|;
+name|remoteLogDir
+operator|.
+name|mkdir
+argument_list|()
+expr_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_REMOTE_APP_LOG_DIR
+argument_list|,
+name|remoteLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// By default AM + 2 containers
+name|config
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_PMEM_MB
+argument_list|,
+literal|4
+operator|*
+literal|1024
+argument_list|)
+expr_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_ADDRESS
+argument_list|,
+name|MiniYARNCluster
+operator|.
+name|getHostname
+argument_list|()
+operator|+
+literal|":0"
+argument_list|)
+expr_stmt|;
+name|config
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOCALIZER_ADDRESS
+argument_list|,
+name|MiniYARNCluster
+operator|.
+name|getHostname
+argument_list|()
+operator|+
+literal|":0"
+argument_list|)
+expr_stmt|;
+name|WebAppUtils
+operator|.
+name|setNMWebAppHostNameAndPort
+argument_list|(
+name|config
+argument_list|,
+name|MiniYARNCluster
+operator|.
+name|getHostname
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// Disable resource checks by default
+if|if
+condition|(
+operator|!
+name|config
+operator|.
+name|getBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|YARN_MINICLUSTER_CONTROL_RESOURCE_MONITORING
+argument_list|,
+name|YarnConfiguration
+operator|.
+name|DEFAULT_YARN_MINICLUSTER_CONTROL_RESOURCE_MONITORING
+argument_list|)
+condition|)
+block|{
+name|config
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_PMEM_CHECK_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|config
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_VMEM_CHECK_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Starting NM: "
+operator|+
+name|index
+argument_list|)
+expr_stmt|;
+name|nodeManagers
+index|[
+name|index
+index|]
+operator|.
+name|init
+argument_list|(
+name|config
+argument_list|)
+expr_stmt|;
 name|super
 operator|.
 name|serviceInit
@@ -1667,7 +1884,7 @@ name|dirsString
 return|;
 block|}
 DECL|method|serviceStart ()
-specifier|public
+specifier|protected
 specifier|synchronized
 name|void
 name|serviceStart
@@ -1677,220 +1894,6 @@ name|Exception
 block|{
 try|try
 block|{
-comment|// create nm-local-dirs and configure them for the nodemanager
-name|String
-name|localDirsString
-init|=
-name|prepareDirs
-argument_list|(
-literal|"local"
-argument_list|,
-name|numLocalDirs
-argument_list|)
-decl_stmt|;
-name|getConfig
-argument_list|()
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_LOCAL_DIRS
-argument_list|,
-name|localDirsString
-argument_list|)
-expr_stmt|;
-comment|// create nm-log-dirs and configure them for the nodemanager
-name|String
-name|logDirsString
-init|=
-name|prepareDirs
-argument_list|(
-literal|"log"
-argument_list|,
-name|numLogDirs
-argument_list|)
-decl_stmt|;
-name|getConfig
-argument_list|()
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_LOG_DIRS
-argument_list|,
-name|logDirsString
-argument_list|)
-expr_stmt|;
-name|File
-name|remoteLogDir
-init|=
-operator|new
-name|File
-argument_list|(
-name|testWorkDir
-argument_list|,
-name|MiniYARNCluster
-operator|.
-name|this
-operator|.
-name|getName
-argument_list|()
-operator|+
-literal|"-remoteLogDir-nm-"
-operator|+
-name|index
-argument_list|)
-decl_stmt|;
-name|remoteLogDir
-operator|.
-name|mkdir
-argument_list|()
-expr_stmt|;
-name|getConfig
-argument_list|()
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_REMOTE_APP_LOG_DIR
-argument_list|,
-name|remoteLogDir
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
-comment|// By default AM + 2 containers
-name|getConfig
-argument_list|()
-operator|.
-name|setInt
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_PMEM_MB
-argument_list|,
-literal|4
-operator|*
-literal|1024
-argument_list|)
-expr_stmt|;
-name|getConfig
-argument_list|()
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_ADDRESS
-argument_list|,
-name|MiniYARNCluster
-operator|.
-name|getHostname
-argument_list|()
-operator|+
-literal|":0"
-argument_list|)
-expr_stmt|;
-name|getConfig
-argument_list|()
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_LOCALIZER_ADDRESS
-argument_list|,
-name|MiniYARNCluster
-operator|.
-name|getHostname
-argument_list|()
-operator|+
-literal|":0"
-argument_list|)
-expr_stmt|;
-name|WebAppUtils
-operator|.
-name|setNMWebAppHostNameAndPort
-argument_list|(
-name|getConfig
-argument_list|()
-argument_list|,
-name|MiniYARNCluster
-operator|.
-name|getHostname
-argument_list|()
-argument_list|,
-literal|0
-argument_list|)
-expr_stmt|;
-comment|// Disable resource checks by default
-if|if
-condition|(
-operator|!
-name|getConfig
-argument_list|()
-operator|.
-name|getBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|YARN_MINICLUSTER_CONTROL_RESOURCE_MONITORING
-argument_list|,
-name|YarnConfiguration
-operator|.
-name|DEFAULT_YARN_MINICLUSTER_CONTROL_RESOURCE_MONITORING
-argument_list|)
-condition|)
-block|{
-name|getConfig
-argument_list|()
-operator|.
-name|setBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_PMEM_CHECK_ENABLED
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
-name|getConfig
-argument_list|()
-operator|.
-name|setBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_VMEM_CHECK_ENABLED
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
-block|}
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"Starting NM: "
-operator|+
-name|index
-argument_list|)
-expr_stmt|;
-name|nodeManagers
-index|[
-name|index
-index|]
-operator|.
-name|init
-argument_list|(
-name|getConfig
-argument_list|()
-argument_list|)
-expr_stmt|;
 operator|new
 name|Thread
 argument_list|()
@@ -2011,7 +2014,7 @@ block|}
 annotation|@
 name|Override
 DECL|method|serviceStop ()
-specifier|public
+specifier|protected
 specifier|synchronized
 name|void
 name|serviceStop
